--- a/style/components/search.css
+++ b/style/components/search.css
@@ -33,7 +33,7 @@
 }
 
 .search-imginput__input::placeholder {
-    font-family: SF Pro Text;
+    font-family: 'SF Pro Display', Helvetica, sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 400;
