--- a/style/page/index.css
+++ b/style/page/index.css
@@ -1,3 +1,23 @@
+@font-face {
+    font-family: 'SF Pro Display';
+    src: url('../../fonts/SF-Pro-Display-Regular.otf');
+  }
+  @font-face {
+    font-family: 'SF Pro Display';
+    src: url('../../fonts/SF-Pro-Display-Bold.otf');
+    font-weight: bold;
+  }
+  @font-face {
+    font-family: 'SF Pro Display';
+    src: url('../../fonts/SF-Pro-Display-BoldItalic.otf');
+    font-style: italic;
+    font-weight: bold;
+  }
+
+
+
 @import url(reset.css);
 @import url(../components/search.css);
 @import url(../components/search-small.css);
+@import url(../components/searchlarge.css);
+
