--- a/style/components/searchlarge.css
+++ b/style/components/searchlarge.css
@@ -1,7 +1,34 @@
 .searchlarge {
-    background: red;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    padding-left: 14px;
+    padding-right: 16px;
+    padding-bottom: 46px;
+    
 }
 
-body {
-    background: red;
+.searchlarge-imginput {
+    background: rgba(0, 0, 0, 0.05);;
+    display: flex;
+    align-items: center;
+    width: 285px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    border-radius: 18px;
+    
+}
+
+.searchlarge-imginput__input {
+    background: none;
+    border: none;
+    width: 249px;
+   
+}
+
+.searchlarge-imginput__input:focus {
+    color:#0584FE;
+
 }
