--- a/style/components/searchlarge.css
+++ b/style/components/searchlarge.css
@@ -10,7 +10,7 @@
 }
 
 .searchlarge-imginput {
-    background: rgba(0, 0, 0, 0.05);;
+    background: rgba(0, 0, 0, 0.05);
     display: flex;
     align-items: center;
     width: 285px;
