--- a/style/components/searchto.css
+++ b/style/components/searchto.css
@@ -23,3 +23,9 @@
       border: none;
       background: none;
   }
+
+  .searchto-imginput p {
+    color: rgba(0, 0, 0, 0.4);
+    font-family: 'SF Pro Display', Helvetica, sans-serif;
+    font-size: 17px;
+  }
