--- a/style/page/messenger-call.css
+++ b/style/page/messenger-call.css
@@ -1,3 +1,4 @@
 @import url(../components/call.css);
 @import url(../components/status-bar.css);
 @import url(./reset.css);
+@import url(../components/navbar-dialog.css);
