--- a/style/page/messenger-call.css
+++ b/style/page/messenger-call.css
@@ -2,3 +2,4 @@
 @import url(../components/status-bar.css);
 @import url(./reset.css);
 @import url(../components/navbar-dialog.css);
+@import url(..//components/navbar-calling.css);
