Feat: content call

--- a/style/components/status-bar.css
+++ b/style/components/status-bar.css
@@ -4,8 +4,9 @@
     width: 90%;
     margin: 0 auto;
     align-items: center;
-    background: black;
+    margin-bottom: 28px;
     color: white;
+    padding-top: 14px;
 }
 
 .status-bar img {
