--- a/style/page/messenger-call.css
+++ b/style/page/messenger-call.css
@@ -3,3 +3,5 @@
 @import url(./reset.css);
 @import url(../components/navbar-dialog.css);
 @import url(..//components/navbar-calling.css);
+@import url(../components/footer.css);
+@import url(../components/content-call.css);
