Feat: messenger-video

--- a/style/components/call.css
+++ b/style/components/call.css
@@ -4,3 +4,10 @@
     margin: 0 auto;
     justify-content: space-between;
 }
+
+.call__video {
+    display: flex;
+    width: 38%;
+    margin: 0 auto;
+    justify-content: space-between;
+}
