--- a/style/page/messenger-video.css
+++ b/style/page/messenger-video.css
@@ -4,4 +4,5 @@
 @import url(../components/navbar-dialog.css);
 @import url(..//components/navbar-calling.css);
 @import url(../components/footer.css);
-@import url(../components/content-call.css);
+@import url(../components/content-video.css);
+@import url(../components/smiles.css);
